--- a/prom-monitor/prometheus.yml.j2
+++ b/prom-monitor/prometheus.yml.j2
@@ -30,5 +30,6 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
     - targets:
-
-
+  {% for host in groups['all1'] %}
+    - {{ hostvars[host]['ansible_host'] }}:9100
+  {% endfor %}
